Implementação de splash art
Agora tem uma tela de carregamento antes de iniciar o programa;

atualização do readme e gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@ hs_err_pid*
 /bin
 
 db.properties
+
+src/model/images/profile/andreia_petta.png
+
+src/model/images/profile/leonardo_petta.png
+
+src/model/images/profile/natalia_petta.png
