Atualização visual viewAgenda

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ src/model/images/profile/andreia_petta.png
 src/model/images/profile/leonardo_petta.png
 
 src/model/images/profile/natalia_petta.png
+.vscode/launch.json
